# ChangeLog for x11-misc/gdeskcal
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/gdeskcal/Attic/ChangeLog,v 1.11 2005/08/13 23:25:40 hansmi Exp $

  13 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  gdeskcal-0.57.1-r1.ebuild:
  Stable on ppc.

  20 Jul 2005; Markus Rothe <corsair@gentoo.org> gdeskcal-0.57.1-r1.ebuild:
  Stable on ppc64

  16 Jul 2005; Jonathan Smith <smithj@gentoo.org> gdeskcal-0.57.1-r1.ebuild:
  stable x86, amd64

*gdeskcal-0.57.1-r1 (17 Jun 2005)

  17 Jun 2005; Jonathan Smith <smithj@gentoo.org>
  +files/gdeskcal-evo2.patch, +gdeskcal-0.57.1-r1.ebuild:
  fixed evolution-2 compability for #91899

  01 Oct 2004; <pyrania@gentoo.org> gdeskcal-0.57.1.ebuild:
  Marked stable on x86.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  gdeskcal-0.57.1.ebuild:
  Masked gdeskcal-0.57.1.ebuild stable for ppc

  27 Aug 2004; Tom Gall <tgall@gentoo.org> gdeskcal-0.57.1.ebuild:
  stable on ppc64, bug #59375

  23 Jul 2004; <pclouds@gentoo.org> gdeskcal-0.57.1.ebuild,
  gdeskcal-0.57.1-gnomeui.patch:
  Added gnome use flag, which uses libgnomeui to support session if possible

  19 Jul 2004; <pclouds@gentoo.org> gdeskcal-0.57.1.ebuild:
  Some stylistic changes: removed using tr, moved GDESKCAL_DIR inside 
  src_install, defined DEPEND instead of RDEPEND

  18 Jul 2004; David Holm <dholm@gentoo.org> gdeskcal-0.57.1.ebuild:
  Added to ~ppc.

*gdeskcal-0.57.1 (18 Jul 2004)

  18 Jul 2004; <pclouds@gentoo.org> gdeskcal-0.57.1.ebuild, metadata.xml:
  new package, closing bug #24037
