@@ -1,1 +1,0 @@
-MD5 c2c1de1046e9026558c51e90fe6f8a9e gDeskCal-0_57_1.tar.gz 102826
